--- a/index 2.html
+++ b/index 2.html
@@ -144,7 +144,7 @@
 </body>
 </html>
 
-<a href="index3.html">ir a la pagina siguiente </a>
+<a href="losiones.html">ir a la pagina siguiente </a>
 
 
 <!DOCTYPE html>
@@ -212,3 +212,4 @@ function enviarComentario() {
 
 </body>
 </html>
+
