Update and rename index4.html to gelatina.html

--- a/gelatina.html
+++ b/gelatina.html
@@ -112,7 +112,7 @@
 </body>
 </html>
 
-<a href="index4.html">ir a la pagina siguiente </a>
+<a href="torta.html">ir a la pagina siguiente </a>
 
 
 
@@ -181,4 +181,5 @@ function enviarComentario() {
 </script>
 
 </body>
+
 </html>
