--- a/losiones.html
+++ b/losiones.html
@@ -144,7 +144,7 @@
 </body>
 </html>
 
-<a href="losiones.html">ir a la pagina siguiente </a>
+<a href="maquillaje.html">ir a la pagina siguiente </a>
 
 
 <!DOCTYPE html>
@@ -212,4 +212,5 @@ function enviarComentario() {
 
 </body>
 </html>
+
 
